--- a/en.lproj/Localizable.strings (Russian).strings
+++ b/en.lproj/Localizable.strings (Russian).strings
@@ -5,3 +5,35 @@
   Created by Irina Muravyeva on 21.11.2024.
   
 */
+
+"weight_loss" = "Снижение веса";
+"IM_role" = "IOS разработчик";
+"IM_name" = "Ирина";
+"IM_surname" = "Муравьёва";
+"user_exist" = "Этот пользователь уже существует."
+"title_for_parameters_label" = "Добавим подробностей: ";
+"edit_title" = "Правка";
+"sex_alert" = "Нужно указать пол: женский или мужской";
+"age_alert" = "Нужно указать свой возраст в годах";
+"height_alert" = "Нужно указать свой рост в сантиметрах";
+"weight_alert" = "Нужно указать свой вес в килограммах";
+"activity_alert" = "Нужно указать уровень активности";
+"goal_alert" = "Нужно указать свою цель";
+"parameters_title" = "Мои параметры: ";
+"error_title_alert" = "Ошибка";
+"help_label" =
+"""
+Для расчета уровня базального метаболизма и определения необходимого калоража используется самая популярная во всем мире формула Харриса-Бенедикта.
+
+Формула была выведена американским физиологом Фрэнсисом Гано Бенедиктом и ботаником Джеймсом Артуром Харрисом еще в начале прошлого века, но до сих пор остается актуальной. Имеет погрешность всего около 5%.
+
+Для расчета калоража при похудении используется дефицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.
+А для набора массы, соответственно, профицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.
+""";
+"mail_title" = "Обратная связь о приложении";
+"mail_message" = "Здравствуйте! Хотелось бы сообщить следующее:";
+"mail_error" = "На устройстве не настроен почтовый клиент.";
+"section_title" = "ПОЛЬЗОВАТЕЛИ";
+"footer_text" = "Свайп влево для удаления или изменения профиля.";
+"delete_title" = "Удалить";
+"edit_title_menu" = "Редактировать";
