Added software localization of menu items. It does not work stably through standard files

--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -1,16 +1,15 @@
-/* 
-  Localizable.strings (Russian).strings
+/*
+  Localizable(Russian).strings
   CalorieCalculation
 
   Created by Irina Muravyeva on 21.11.2024.
   
 */
-
 "weight_loss" = "Снижение веса";
 "IM_role" = "IOS разработчик";
 "IM_name" = "Ирина";
 "IM_surname" = "Муравьёва";
-"user_exist" = "Этот пользователь уже существует."
+"user_exist" = "Этот пользователь уже существует.";
 "title_for_parameters_label" = "Добавим подробностей: ";
 "edit_title" = "Правка";
 "sex_alert" = "Нужно указать пол: женский или мужской";
@@ -21,15 +20,7 @@
 "goal_alert" = "Нужно указать свою цель";
 "parameters_title" = "Мои параметры: ";
 "error_title_alert" = "Ошибка";
-"help_label" =
-"""
-Для расчета уровня базального метаболизма и определения необходимого калоража используется самая популярная во всем мире формула Харриса-Бенедикта.
-
-Формула была выведена американским физиологом Фрэнсисом Гано Бенедиктом и ботаником Джеймсом Артуром Харрисом еще в начале прошлого века, но до сих пор остается актуальной. Имеет погрешность всего около 5%.
-
-Для расчета калоража при похудении используется дефицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.
-А для набора массы, соответственно, профицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.
-""";
+"help_label" = "Для расчета уровня базального метаболизма и определения необходимого калоража используется самая популярная во всем мире формула Харриса-Бенедикта.\n\nФормула была выведена американским физиологом Фрэнсисом Гано Бенедиктом и ботаником Джеймсом Артуром Харрисом еще в начале прошлого века, но до сих пор остается актуальной. Имеет погрешность всего около 5%.\n\nДля расчета калоража при похудении используется дефицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.\nА для набора массы, соответственно, профицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.";
 "mail_title" = "Обратная связь о приложении";
 "mail_message" = "Здравствуйте! Хотелось бы сообщить следующее:";
 "mail_error" = "На устройстве не настроен почтовый клиент.";
