--- a/en-GB.lproj/Localizable.strings
+++ b/en-GB.lproj/Localizable.strings
@@ -28,3 +28,19 @@
 "footer_text" = "Swipe to the left to delete or change the profile.";
 "delete_title" = "Delete";
 "edit_title_menu" = "Edit";
+"email_to_developer_title" = "WRITE TO THE DEVELOPER";
+"about_us_title" = "ABOUT US";
+"sex_title_label" = "Gender by birth";
+"age_title_label" = "Age, years";
+"height_title_label" = "Height, cm";
+"weight_title_label" = "Weight, kg";
+"activity_title_label" = "Lifestyle";
+"goal_title_label" = "Goal";
+"male_title_label" = "male";
+"female_title_label" = "female";
+"result_title_label" = "My results";
+"day_norm_title_label" = "Daily norm:";
+"kcal_title_label" = "Kcal";
+"protein_title_label" = "Protein";
+"fat_title_label" = "Fat";
+"carbs_title_label" = "Carbs";
