--- a/zh-Hans.lproj/Localizable.strings
+++ b/zh-Hans.lproj/Localizable.strings
@@ -28,3 +28,19 @@
 "footer_text" = "向左滑动以删除或更改用户。";
 "delete_title" = "删除";
 "edit_title_menu" = "编辑";
+"email_to_developer_title" = "写信给开发人员";
+"about_us_title" = "关于我们";
+"sex_title_label" = "性别";
+"age_title_label" = "年龄 (年)";
+"height_title_label" = "身高 (厘米)";
+"weight_title_label" = "重量 (公斤)";
+"activity_title_label" = "生活方式";
+"goal_title_label" = "目标";
+"male_title_label" = "男";
+"female_title_label" = "女";
+"result_title_label" = "我的结果";
+"day_norm_title_label" = "每日规范:";
+"kcal_title_label" = "千卡";
+"protein_title_label" = "蛋白质";
+"fat_title_label" = "脂肪";
+"carbs_title_label" = "碳水化合物";
