--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -44,4 +44,12 @@
 //"protein_title_label" = "Белки";
 //"fat_title_label" = "Жиры";
 //"carbs_title_label" = "Углеводы";
-
+"no_activity" = "<5000 шагов, тренировки отсутствуют";
+"low_activity" = "7-9 тыс. шагов + 2-3 тренировки в неделю";
+"normal_activity" = "10-15 тыс. шагов + 3-4 тренировки в неделю";
+"high_activity" = "5-7 тренировок в неделю";
+"extremal_activity" = "Работники тяжёлого физического труда";
+"weight_loss" = "Похудение";
+"muscle_gain" = "Набор мышечной массы";
+"maintenance" = "Поддержание формы";
+"choose_value" = "Выбери значение...";
