--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -13,9 +13,9 @@
 "title_for_parameters_label" = "Добавим подробностей: ";
 "edit_title" = "Правка";
 "sex_alert" = "Нужно указать пол: женский или мужской";
-"age_alert" = "Нужно указать свой возраст в годах";
-"height_alert" = "Нужно указать свой рост в сантиметрах";
-"weight_alert" = "Нужно указать свой вес в килограммах";
+"age_alert" = "Нужно указать свой возраст в годах. Формула Бенедикта-Харриса лучше всего работает для людей в возрасте от 18 до 80 лет. Для более старших людей или для детей рекомендуется использовать другие методы для более точных расчётов.";
+"height_alert" = "Нужно указать свой рост в сантиметрах. В общем случае формула подходит для людей ростом в пределах 140–200 см, но в крайних случаях, например, при экстремальном ожирении или недоедании, результаты могут быть неточными.";
+"weight_alert" = "Нужно указать свой вес в килограммах. В общем случае формула подходит для людей с массой тела в пределах 50–150 кг, но в крайних случаях, например, при экстремальном ожирении или недоедании, результаты могут быть неточными.";
 "activity_alert" = "Нужно указать уровень активности";
 "goal_alert" = "Нужно указать свою цель";
 "parameters_title" = "Мои параметры: ";
@@ -28,22 +28,22 @@
 "footer_text" = "Свайп влево для удаления или изменения профиля.";
 "delete_title" = "Удалить";
 "edit_title_menu" = "Редактировать";
-//"email_to_developer_title" = "НАПИСАТЬ РАЗРАБОТЧИКУ";
-//"about_us_title" = "О НАС";
-//"sex_title_label" = "пол";
-//"age_title_label" = "Возраст, лет";
-//"height_title_label" = "Рост, см";
-//"weight_title_label" = "Вес, кг";
-//"activity_title_label" = "Образ жизни";
-//"goal_title_label" = "Цель";
-//"male_title_label" = "мужской";
-//"female_title_label" = "женский";
-//"result_title_label" = "Мой расчет";
-//"day_norm_title_label" = "Суточная норма:";
-//"kcal_title_label" = "Ккал";
-//"protein_title_label" = "Белки";
-//"fat_title_label" = "Жиры";
-//"carbs_title_label" = "Углеводы";
+"email_to_developer_title" = "НАПИСАТЬ РАЗРАБОТЧИКУ";
+"about_us_title" = "О НАС";
+"sex_title_label" = "пол";
+"age_title_label" = "Возраст, лет";
+"height_title_label" = "Рост, см";
+"weight_title_label" = "Вес, кг";
+"activity_title_label" = "Образ жизни";
+"goal_title_label" = "Цель";
+"male_title_label" = "мужской";
+"female_title_label" = "женский";
+"result_title_label" = "Мой расчет";
+"day_norm_title_label" = "Суточная норма:";
+"kcal_title_label" = "Ккал";
+"protein_title_label" = "Белки";
+"fat_title_label" = "Жиры";
+"carbs_title_label" = "Углеводы";
 "no_activity" = "<5000 шагов, тренировки отсутствуют";
 "low_activity" = "7-9 тыс. шагов + 2-3 тренировки в неделю";
 "normal_activity" = "10-15 тыс. шагов + 3-4 тренировки в неделю";
@@ -53,3 +53,7 @@
 "muscle_gain" = "Набор мышечной массы";
 "maintenance" = "Поддержание формы";
 "choose_value" = "Выбери значение...";
+"age_attention_title_alert" = "Внимание!";
+"age_attention_text_alert" = "Формула предполагает, что она применима для взрослых (от 18 лет и старше). Для детей и подростков её использовать не рекомендуется, так как их метаболизм имеет особенности, отличные от взрослых. Рекомендуется использовать другие методы для более точных расчётов.";
+
+
