--- a/zh-Hans.lproj/Localizable.strings
+++ b/zh-Hans.lproj/Localizable.strings
@@ -13,9 +13,9 @@
 "title_for_parameters_label" = "请填写这些字段: ";
 "edit_title" = "编辑";
 "sex_alert" = "指定女性或男性性别";
-"age_alert" = "指定您的年龄（年）";
-"height_alert" = "指定你的身高（厘米）";
-"weight_alert" = "指定你的体重（公斤）";
+"age_alert" = "指定您的年龄（年）。本尼迪克特-哈里斯公式最适合18至80岁的人。 对于老年人或儿童，建议使用其他方法进行更准确的计算。";
+"height_alert" = "指定你的身高（厘米）。一般来说，该配方适用于身高在140-200厘米之间的人，但在极端情况下，例如患有极度肥胖或营养不良，结果可能不准确。";
+"weight_alert" = "指定你的体重（公斤）。一般来说，该配方适用于体重在50-150kg范围内的人，但在极端情况下，例如，患有极度肥胖或营养不良，结果可能不准确。";
 "activity_alert" = "选择你通常有多活跃。";
 "goal_alert" = "选择你的目标。";
 "parameters_title" = "我的设置:";
@@ -53,3 +53,5 @@
 "muscle_gain" = "肌肉增益";
 "maintenance" = "维护";
 "choose_value" = "选择价值";
+"age_attention_title_alert" = "注意事项";
+"age_attention_text_alert" = "该公式假设它适用于成人（18岁及以上）。 不建议儿童和青少年使用它，因为它们的新陈代谢具有与成人不同的特征。 建议使用其他方法进行更精确的计算。";
