--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "activity_alert" = "Нужно указать уровень активности";
 "goal_alert" = "Нужно указать свою цель";
 "parameters_title" = "Мои параметры: ";
-"error_title_alert" = "Ошибка";
+"error_title_alert" = "Упс!";
 "help_label" = "Для расчета уровня базального метаболизма и определения необходимого калоража используется самая популярная во всем мире формула Харриса-Бенедикта.\n\nФормула была выведена американским физиологом Фрэнсисом Гано Бенедиктом и ботаником Джеймсом Артуром Харрисом еще в начале прошлого века, но до сих пор остается актуальной. Имеет погрешность всего около 5%.\n\nДля расчета калоража при похудении используется дефицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.\nА для набора массы, соответственно, профицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.";
 "mail_title" = "Обратная связь о приложении";
 "mail_message" = "Здравствуйте! Хотелось бы сообщить следующее:";
@@ -55,5 +55,9 @@
 "choose_value" = "Выбери значение...";
 "age_attention_title_alert" = "Внимание!";
 "age_attention_text_alert" = "Формула предполагает, что она применима для взрослых (от 18 лет и старше). Для детей и подростков её использовать не рекомендуется, так как их метаболизм имеет особенности, отличные от взрослых. Рекомендуется использовать другие методы для более точных расчётов.";
-
-
+"delete_attention_title_alert" = "Не получится";
+"delete_attention_text_alert" = "Вы не можете удалить текущий аккаунт. Сначала смените текущий профиль.";
+"sure_to_delete_title" = "Удалить строку?";
+"sure_to_delete_message" = "Вы уверены, что хотите удалить эту строку?";
+"cancel" = "Отмена";
+"delete" = "Удалить";
