Added user change when selecting in ProfilesMenu

--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "goal_alert" = "Нужно указать свою цель";
 "parameters_title" = "Мои параметры: ";
 "error_title_alert" = "Упс!";
-"help_label" = "Для расчета уровня базального метаболизма и определения необходимого калоража используется самая популярная во всем мире формула Харриса-Бенедикта.\n\nФормула была выведена американским физиологом Фрэнсисом Гано Бенедиктом и ботаником Джеймсом Артуром Харрисом еще в начале прошлого века, но до сих пор остается актуальной. Имеет погрешность всего около 5%.\n\nДля расчета калоража при похудении используется дефицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.\nА для набора массы, соответственно, профицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.";
+"help_label" = "Для расчета уровня базального метаболизма и определения необходимого калоража используется самая популярная во всем мире формула Харриса-Бенедикта.\n\nФормула была выведена американским физиологом Фрэнсисом Гано Бенедиктом и ботаником Джеймсом Артуром Харрисом еще в начале прошлого века, но до сих пор остается актуальной. Имеет погрешность всего около 5%.\n\nДля расчета калоража при похудении используется дефицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.\nА для набора массы, соответственно, профицит калорий в размере 20% с корректировкой пропорций белков, жиров и углеводов.\n\nСтоит также учитывать, что формула предполагает использование для взрослых людей от 18 до 80 лет, ростом в пределах 140–200 см, и весом от 50 до 150 кг. ";
 "mail_title" = "Обратная связь о приложении";
 "mail_message" = "Здравствуйте! Хотелось бы сообщить следующее:";
 "mail_error" = "На устройстве не настроен почтовый клиент.";
