--- a/zh-Hans.lproj/Localizable.strings
+++ b/zh-Hans.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "goal_alert" = "选择你的目标。";
 "parameters_title" = "我的设置:";
 "error_title_alert" = "错误";
-"help_label" = "Harris-Benedict公式是全球最受欢迎的公式，用于计算基础代谢水平并确定必要的卡路里\n\n该公式是由美国生理学家弗朗西斯*加诺*本尼迪克特和植物学家詹姆斯*亚瑟*哈里斯在上个世纪初推导出来的，但仍然具有相关性。 它的误差范围只有5%左右.\n\n为了计算减肥的卡路里摄入量，使用20％的卡路里赤字来调整蛋白质，脂肪和碳水化合物的比例。\n而对于体重增加，分别为20％的卡路里过剩，调整蛋白质，脂肪和碳水化合物的比例。";
+"help_label" = "Harris-Benedict公式是全球最受欢迎的公式，用于计算基础代谢水平并确定必要的卡路里\n\n该公式是由美国生理学家弗朗西斯*加诺*本尼迪克特和植物学家詹姆斯*亚瑟*哈里斯在上个世纪初推导出来的，但仍然具有相关性。 它的误差范围只有5%左右.\n\n为了计算减肥的卡路里摄入量，使用20％的卡路里赤字来调整蛋白质，脂肪和碳水化合物的比例。\n而对于体重增加，分别为20％的卡路里过剩，调整蛋白质，脂肪和碳水化合物的比例。\n\n同样值得考虑的是，该配方适用于18至80岁的成年人，身高为140-200厘米，体重为50至150公斤。";
 "mail_title" = "关于应用程序的反馈";
 "mail_message" = "你好！ 我想告诉你以下几点:";
 "mail_error" = "设备上未配置电子邮件客户端。";
