Added color scheme to App, Changed update cell for collectionView (GreetingViewController)

--- a/en-GB.lproj/Localizable.strings
+++ b/en-GB.lproj/Localizable.strings
@@ -38,7 +38,7 @@
 "goal_title_label" = "Goal";
 "male_title_label" = "male";
 "female_title_label" = "female";
-"result_title_label" = "My results";
+"result_title_label" = "MY DAILY NORM :";
 "day_norm_title_label" = "Daily norm:";
 "kcal_title_label" = "Kcal";
 "protein_title_label" = "Protein";
