Fixed a bug when adding a new user again. Added localization for the Greeting View Controller. Fixed the doubling of user icons in the profile Menu after deleting one of the users

--- a/en-GB.lproj/Localizable.strings
+++ b/en-GB.lproj/Localizable.strings
@@ -61,3 +61,7 @@
 "sure_to_delete_message" = "Are you sure you want to delete this line?";
 "cancel" = "Cancel";
 "delete" = "Delete";
+"lets_greeting" = "Let's get know!";
+"input_nickname" = "Input your nickname:";
+"choose_icon" = "Choose your icon:";
+"go_on" = "Continue";
