--- a/ru.lproj/Localizable.strings
+++ b/ru.lproj/Localizable.strings
@@ -61,3 +61,7 @@
 "sure_to_delete_message" = "Вы уверены, что хотите удалить эту строку?";
 "cancel" = "Отмена";
 "delete" = "Удалить";
+"lets_greeting" = "Давай знакомиться !";
+"input_nickname" = "Введи имя:";
+"choose_icon" = "Выбери иконку:";
+"go_on" = "Идём дальше";
